examples/type_system/failing/123_array_missing_close_bracket.flx
// parity-expected-stdout-begin
// parity-expected-stdout-end
// parity-expected-stderr-begin
// • 1 error • examples/type_system/failing/123_array_missing_close_bracket.flx
// error[E034]: Missing Closing Delimiter
//
// Expected `]` to close array literal.
//
//   examples/type_system/failing/123_array_missing_close_bracket.flx:21:1
//    |
// 21 | let after = 3
//    | ^^^
//
// Hint:
//   Array literals use `[| ... |]` and must end with `]`.
// parity-expected-stderr-end
// expect: compile_error
// expect-error: E034

let xs = [|1, 2|
let after = 3
